--- a/restfactory/build.gradle
+++ b/restfactory/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
-group = "com.github.rogalabs"
+group = "com.github.RogaLabs"
 
 android {
     compileSdkVersion 23
