change app name on string.xml

--- a/restfactory/src/main/AndroidManifest.xml
+++ b/restfactory/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.rogalabs.restfactory">
 
     <application android:allowBackup="true"
-        android:label=""
+        android:label="@string/app_name"
         android:supportsRtl="true"
 >
 
